oppdatert feil - tomme felter ikke fylt ut men notert

--- a/forelesing 24.08.2022/algoritme.intro.ipynb
+++ b/forelesing 24.08.2022/algoritme.intro.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "\n",
     "### Induksjon\n",
-    "……\n",
+    ".... mangler noe her .... ellers kan du se matte 3 🤓\n",
     "\n",
     "### Delinduksjon\n",
     "\n",
@@ -135,7 +135,9 @@
     "Rekursiv dekomponering\n",
     "- Kaller seg selv\n",
     "\n",
+    "\n",
     "1. Induksjonshypotese\n",
+    "... mangler trinn\n",
     "\n",
     "Iterativ dekomponering\n",
     "1. Invariant: egenskap ikke endres\n",
