--- a/forelesing 24.08.2022/algoritme.intro.ipynb
+++ b/forelesing 24.08.2022/algoritme.intro.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
    "source": [
     "def insertion_sort(A: list[int]):\n",
     "    n: int = len(A)\n",
-    "    for i in range(2, n):\n",
+    "    for i in range(1, n):\n",
     "        key: int = A[i]\n",
     "        j:int = i - 1\n",
     "        while j >= 0 and A[j] > key:\n",
@@ -192,6 +192,66 @@
     "    return A\n",
     "\n",
     "print(insertion_sort([2,5,4,6,1,3]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Oppgave med tester fra Øving 1**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trial 1\n",
+      "Test: []\tInsertion Sort: []\tANS: []\n",
+      "Correct: True\n",
+      "Trial 2\n",
+      "Test: [1, 2, 3]\tInsertion Sort: [1, 2, 3]\tANS: [1, 2, 3]\n",
+      "Correct: True\n",
+      "Trial 3\n",
+      "Test: [1, 2, 3]\tInsertion Sort: [1, 2, 3]\tANS: [1, 2, 3]\n",
+      "Correct: True\n",
+      "Trial 4\n",
+      "Test: [2, 3, 5, 6, 7, 9]\tInsertion Sort: [2, 3, 5, 6, 7, 9]\tANS: [2, 3, 5, 6, 7, 9]\n",
+      "Correct: True\n",
+      "Trial 5\n",
+      "Test: [-1, -1, 1, 2]\tInsertion Sort: [-1, -1, 1, 2]\tANS: [-1, -1, 1, 2]\n",
+      "Correct: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "tests = [\n",
+    "    ([], []),\n",
+    "    ([1, 2, 3], [1, 2, 3]),\n",
+    "    ([3, 2, 1], [1, 2, 3]),\n",
+    "    ([9, 7, 3, 5, 2, 6], [2, 3, 5, 6, 7, 9]),\n",
+    "    ([-1, 1, -1, 2], [-1, -1, 1, 2]),\n",
+    "]\n",
+    "\n",
+    "def print_insertion(tup: tuple[list, list]):\n",
+    "    IS = insertion_sort(tup[0])\n",
+    "    print(f'Test: {tup[0]}\\tInsertion Sort: {IS}\\tANS: {tup[1]}')\n",
+    "    print(f'Correct: {IS == tup[1]}')\n",
+    "\n",
+    "for i in range(0, len(tests)):\n",
+    "    print(f'Trial {i + 1}')\n",
+    "    print_insertion(tests[i])"
    ]
   },
   {
